--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,17 @@
         android:theme="@style/Theme.AMazeByEvanHellersund"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".AMazeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".GeneratingActivity"
+            android:exported="true">
         </activity>
     </application>
 
