--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,13 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    sourceSets {
+        main {
+            java {
+                exclude '**/CompassRose.java'
+            }
+        }
+    }
 
     buildTypes {
         release {
