MazePanel drawing method improvements + compassrose + manual

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,13 +15,14 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    sourceSets {
-        main {
-            java {
-                exclude '**/CompassRose.java'
-            }
-        }
-    }
+
+    //sourceSets {
+    //    main {
+    //        java {
+    //            exclude '**/CompassRose.java'
+    //        }
+    //    }
+    //}
 
     buildTypes {
         release {
